--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 authors = ["Antoni Boucher <bouanto@zoho.com>"]
 
 [dependencies]
+docopt = "^0.6"
+glib = "^0.1"
 gtk = "^0.1"
-mg = "^0.0.3"
+gtk-sys = "^0.3"
+mg = "^0.0.4"
 mg-settings = "^0.0.2"
+rustc-serialize = "^0.3"
 url = "^1.2"
 xdg = "^2.0"
 
