--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,14 @@ docopt = "^0.6"
 glib = "^0.1"
 gtk = "^0.1"
 gtk-sys = "^0.3"
-mg = "^0.0.4"
+#mg = "^0.0.4"
 mg-settings = "^0.0.2"
 rustc-serialize = "^0.3"
 url = "^1.2"
 xdg = "^2.0"
+
+[dependencies.mg]
+git = "https://github.com/antoyo/mg"
 
 [dependencies.webkit2]
 git = "https://github.com/antoyo/webkit2-rs"
