--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,18 @@ version = "0.1.0"
 authors = ["Antoni Boucher <bouanto@zoho.com>"]
 
 [dependencies]
+dbus = "^0.4"
+dbus-macros = "^0.0.3"
 docopt = "^0.6"
+libc = "^0.2"
 #mg = "^0.0.4"
 mg-settings = "^0.0.2"
 rustc-serialize = "^0.3"
 url = "^1.2"
 xdg = "^2.0"
+
+[features]
+default = ["webkit2/v2_4"]
 
 [dependencies.gdk]
 git = "https://github.com/gtk-rs/gdk"
