--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -10,8 +10,14 @@ crate-type = ["dylib"]
 default = ["webkit2gtk-webextension/v2_12"]
 
 [dependencies]
-dbus = "^0.4"
-dbus-macros = "^0.0.5"
+
+[dependencies.gdbus]
+git = "https://github.com/antoyo/gdbus-rs"
+version = "0.0.1"
+
+[dependencies.gio-sys]
+git = "https://github.com/gtk-rs/sys"
+version = "0.3.1"
 
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
