--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ authors = ["Antoni Boucher <bouanto@zoho.com>"]
 [dependencies]
 docopt = "^0.6"
 libc = "^0.2"
+number_prefix = "^0.2"
 rustc-serialize = "^0.3"
 simplelog = "^0.2"
 url = "^1.2"
 xdg = "^2.0"
 
 [features]
-default = ["webkit2gtk/v2_12"]
+default = ["gtk/v3_12", "webkit2gtk/v2_12"]
 
 [dependencies.gdbus]
 git = "https://github.com/antoyo/gdbus-rs"
@@ -29,6 +30,10 @@ version = "0.3.1"
 [dependencies.glib]
 git = "https://github.com/gtk-rs/glib"
 version = "0.1.0"
+
+[dependencies.glib-sys]
+git = "https://github.com/gtk-rs/sys"
+version = "0.3.1"
 
 [dependencies.gtk]
 git = "https://github.com/gtk-rs/gtk"
