Added possibility to open a file instead of downloading it.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ version = "0.1.0"
 docopt = "^0.6"
 libc = "^0.2"
 number_prefix = "^0.2"
+open = "^1.1"
 regex = "^0.1"
 rustc-serialize = "^0.3"
 simplelog = "^0.2"
+tempfile = "^2.1"
 url = "^1.2"
 xdg = "^2.0"
 
