--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,8 +61,9 @@ version = "^0.0.1"
 git = "https://github.com/antoyo/webkit2gtk-rs"
 version = "^0.1"
 
-[replace]
-"yaml-rust:0.3.4" = { git = "https://github.com/antoyo/yaml-rust", branch = "avoid-quotes" }
-
 [features]
 default = ["gtk/v3_16", "webkit2gtk/v2_12"]
+
+[replace."yaml-rust:0.3.4"]
+branch = "avoid-quotes"
+git = "https://github.com/antoyo/yaml-rust"
