--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -12,6 +12,7 @@ default = ["webkit2gtk-webextension/v2_12"]
 [dependencies]
 log = "^0.3"
 regex = "^0.1"
+simplelog = "^0.2"
 url = "^1.2"
 xdg = "^2.0"
 
