--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [dependencies]
 docopt = "^0.6"
 libc = "^0.2"
+log = "^0.3"
 number_prefix = "^0.2"
 open = "^1.1"
 regex = "^0.1"
@@ -13,7 +14,7 @@ rustc-serialize = "^0.3"
 serde = "^0.8.16"
 serde_derive = "^0.8.16"
 serde_yaml = "^0.5.0"
-simplelog = "^0.3"
+simplelog = "^0.4"
 tempfile = "^2.1"
 url = "^1.2"
 xdg = "^2.0"
