Start of the login form filler.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ libc = "^0.2"
 log = "^0.3"
 number_prefix = "^0.2"
 open = "^1.1"
+password-store = "^0.1.0"
 regex = "^0.1"
 rustc-serialize = "^0.3"
 serde = "^0.8.16"
