Added missing settings in default config file.

--- a/config/config
+++ b/config/config
@@ -7,3 +7,7 @@ set home-page = https://duckduckgo.com/
 search-engine wikipedia http://en.wikipedia.org/w/index.php?search={}
 
 set hint-chars = hjklasdfgyuiopqwertnmzxcvb
+
+set cookie-accept = always
+
+set password-storage = cleartext
