--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,14 @@ version = "0.1.0"
 
 [dependencies]
 docopt = "^0.6"
+lazy_static = "^0.2.2"
 libc = "^0.2"
 log = "^0.3"
 number_prefix = "^0.2"
 open = "^1.1"
 password-store = "^0.1.0"
 regex = "^0.1"
+rusqlite = "^0.7.3"
 rustc-serialize = "^0.3"
 serde = "^0.8.16"
 serde_derive = "^0.8.16"
@@ -77,6 +79,8 @@ tempdir = "^0.3"
 
 [features]
 default = ["cairo-rs/png", "gtk/v3_16", "webkit2gtk/v2_12"]
+
+[replace]
 
 [replace."yaml-rust:0.3.4"]
 git = "https://github.com/chyh1990/yaml-rust"
