--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,65 +4,46 @@ name = "titanium"
 version = "0.1.0"
 
 [dependencies]
+cairo-rs = "^0.1.3"
 docopt = "^0.6"
+gdk = "^0.5.3"
+glib = "^0.1.3"
+glib-sys = "^0.3.4"
+gtk = "^0.1.3"
 lazy_static = "^0.2.2"
 libc = "^0.2"
 log = "^0.3"
+mg-settings = "^0.2.2"
+mg-settings-macros = "^0.2.1"
 number_prefix = "^0.2"
 open = "^1.1"
 rusqlite = "^0.7.3"
 rustc-serialize = "^0.3"
 simplelog = "^0.4"
+structopt = "^0.0.3"
+structopt-derive = "^0.0.3"
 tempfile = "^2.1"
 url = "^1.2"
 xdg = "^2.0"
 
-[dependencies.cairo-rs]
-git = "https://github.com/gtk-rs/cairo"
-version = "0.1.0"
-
-[dependencies.gdbus]
-git = "https://github.com/antoyo/gdbus-rs"
-version = "0.0.1"
-
-[dependencies.gdk]
-git = "https://github.com/gtk-rs/gdk"
-version = "0.5.0"
-
-[dependencies.gio-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.1"
-
-[dependencies.glib]
-git = "https://github.com/gtk-rs/glib"
-version = "0.1.0"
-
-[dependencies.glib-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.1"
-
-[dependencies.gtk]
-git = "https://github.com/gtk-rs/gtk"
-version = "0.1.0"
-
-[dependencies.gtk-sys]
-git = "https://github.com/gtk-rs/sys"
-version = "0.3.1"
+[dependencies.futures]
+branch = "spawn-trait"
+git = "https://github.com/alexcrichton/futures-rs"
 
 [dependencies.mg]
 git = "https://github.com/antoyo/mg"
 
-[dependencies.mg-settings]
-git = "https://github.com/antoyo/mg-settings"
-version = "^0.0.5-pre"
+[dependencies.relm]
+branch = "feature/futures-glib"
+git = "https://github.com/antoyo/relm"
 
-[dependencies.mg-settings-macros]
-git = "https://github.com/antoyo/mg-settings"
-version = "^0.0.1"
+[dependencies.relm-attributes]
+branch = "feature/futures-glib"
+git = "https://github.com/antoyo/relm"
 
-[dependencies.secret]
-git = "https://github.com/antoyo/secret-rs"
-version = "^0.1"
+[dependencies.relm-derive]
+branch = "feature/futures-glib"
+git = "https://github.com/antoyo/relm"
 
 [dependencies.titanium-common]
 path = "titanium-common"
@@ -78,3 +59,9 @@ tempdir = "^0.3"
 
 [features]
 default = ["cairo-rs/png", "gtk/v3_16", "webkit2gtk/v2_12"]
+
+[replace]
+
+[replace."futures:0.1.13"]
+branch = "spawn-trait"
+git = "https://github.com/alexcrichton/futures-rs"
