--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ name = "titanium"
 version = "0.1.0"
 
 [dependencies]
+bincode = "^0.8.0"
 cairo-rs = "^0.1.3"
 docopt = "^0.6"
 gdk = "^0.5.3"
@@ -23,12 +24,19 @@ simplelog = "^0.4"
 structopt = "^0.0.3"
 structopt-derive = "^0.0.3"
 tempfile = "^2.1"
+tokio-io = "^0.1.1"
 url = "^1.2"
 xdg = "^2.0"
+
+[dependencies.fg-uds]
+git = "https://github.com/antoyo/fg-uds-rs"
 
 [dependencies.futures]
 branch = "spawn-trait"
 git = "https://github.com/alexcrichton/futures-rs"
+
+[dependencies.futures-glib]
+git = "https://github.com/antoyo/futures-glib-rs"
 
 [dependencies.mg]
 git = "https://github.com/antoyo/mg"
