--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 bincode = "^0.8.0"
 glib = "^0.1.3"
 glib-sys = "^0.3.4"
+lazy_static = "^0.2.8"
 log = "^0.3"
 serde = "^1.0.7"
 simplelog = "^0.4"
