--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 bincode = "^0.8.0"
 cairo-rs = "^0.1.3"
 docopt = "^0.6"
+futures = "^0.1.14"
 gdk = "^0.5.3"
 glib = "^0.1.3"
 glib-sys = "^0.3.4"
@@ -30,10 +31,6 @@ xdg = "^2.0"
 
 [dependencies.fg-uds]
 git = "https://github.com/antoyo/fg-uds-rs"
-
-[dependencies.futures]
-branch = "spawn-trait"
-git = "https://github.com/alexcrichton/futures-rs"
 
 [dependencies.futures-glib]
 git = "https://github.com/antoyo/futures-glib-rs"
@@ -59,6 +56,7 @@ version = "^0.1"
 
 [dependencies.webkit2gtk]
 git = "https://github.com/antoyo/webkit2gtk-rs"
+branch = "crate"
 version = "^0.1"
 
 [dev-dependencies]
@@ -67,9 +65,3 @@ tempdir = "^0.3"
 
 [features]
 default = ["cairo-rs/png", "gtk/v3_16", "webkit2gtk/v2_12"]
-
-[replace]
-
-[replace."futures:0.1.13"]
-branch = "spawn-trait"
-git = "https://github.com/alexcrichton/futures-rs"
