--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 bincode = "^0.8.0"
+futures = "^0.1.14"
 glib = "^0.1.3"
 glib-sys = "^0.3.4"
 lazy_static = "^0.2.8"
@@ -17,10 +18,6 @@ xdg = "^2.0"
 
 [dependencies.fg-uds]
 git = "https://github.com/antoyo/fg-uds-rs"
-
-[dependencies.futures]
-branch = "spawn-trait"
-git = "https://github.com/alexcrichton/futures-rs"
 
 [dependencies.futures-glib]
 git = "https://github.com/antoyo/futures-glib-rs"
@@ -38,10 +35,12 @@ path = "../titanium-common"
 
 [dependencies.webkit2gtk-webextension]
 git = "https://github.com/antoyo/webkit2gtk-webextension-rs"
+branch = "crate"
 version = "^0.1"
 
 [dependencies.webkit2gtk-webextension-sys]
 git = "https://github.com/antoyo/webkit2gtk-webextension-sys-rs"
+branch = "crate"
 version = "^0.2"
 
 [features]
@@ -49,9 +48,3 @@ default = ["webkit2gtk-webextension/v2_12"]
 
 [lib]
 crate-type = ["dylib"]
-
-[replace]
-
-[replace."futures:0.1.13"]
-branch = "spawn-trait"
-git = "https://github.com/alexcrichton/futures-rs"
