--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,6 @@ name = "titanium"
 version = "0.1.0"
 
 [dependencies]
-bincode = "^0.8.0"
 cairo-rs = "^0.1.3"
 docopt = "^0.6"
 futures = "^0.1.14"
@@ -19,6 +18,7 @@ mg-settings = "^0.2.2"
 mg-settings-macros = "^0.2.1"
 number_prefix = "^0.2"
 open = "^1.1"
+password-store = "^0.1.1"
 rusqlite = "^0.7.3"
 rustc-serialize = "^0.3"
 simplelog = "^0.4"
@@ -26,6 +26,7 @@ structopt = "^0.0.3"
 structopt-derive = "^0.0.3"
 tempfile = "^2.1"
 tokio-io = "^0.1.1"
+tokio-serde-bincode = "^0.1.0"
 url = "^1.2"
 xdg = "^2.0"
 
@@ -55,8 +56,8 @@ path = "titanium-common"
 version = "^0.1"
 
 [dependencies.webkit2gtk]
-git = "https://github.com/antoyo/webkit2gtk-rs"
 branch = "crate"
+git = "https://github.com/antoyo/webkit2gtk-rs"
 version = "^0.1"
 
 [dev-dependencies]
