--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -4,7 +4,6 @@ name = "titanium-web-extension"
 version = "0.1.0"
 
 [dependencies]
-bincode = "^0.8.0"
 futures = "^0.1.14"
 glib = "^0.1.3"
 glib-sys = "^0.3.4"
@@ -13,6 +12,7 @@ log = "^0.3"
 serde = "^1.0.7"
 simplelog = "^0.4"
 tokio-io = "^0.1.1"
+tokio-serde-bincode = "^0.1.0"
 url = "^1.2"
 xdg = "^2.0"
 
@@ -34,13 +34,13 @@ git = "https://github.com/antoyo/relm"
 path = "../titanium-common"
 
 [dependencies.webkit2gtk-webextension]
-git = "https://github.com/antoyo/webkit2gtk-webextension-rs"
 branch = "crate"
+git = "https://github.com/antoyo/webkit2gtk-webextension-rs"
 version = "^0.1"
 
 [dependencies.webkit2gtk-webextension-sys]
-git = "https://github.com/antoyo/webkit2gtk-webextension-sys-rs"
 branch = "crate"
+git = "https://github.com/antoyo/webkit2gtk-webextension-sys-rs"
 version = "^0.2"
 
 [features]
