--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [dependencies]
 cairo-rs = "^0.1.3"
 docopt = "^0.6"
+error-chain = "^0.10.0"
 futures = "^0.1.14"
 gdk = "^0.5.3"
 glib = "^0.1.3"
