--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ futures = "^0.1.14"
 gdk = "^0.5.3"
 glib = "^0.1.3"
 gtk = "^0.1.3"
+gumdrop = "^0.2.0"
+gumdrop_derive = "^0.2.0"
 log = "^0.3"
 mg-settings = "^0.2.2"
 mg-settings-macros = "^0.2.1"
@@ -19,8 +21,6 @@ open = "^1.1"
 password-store = "^0.1.1"
 rusqlite = "^0.7.3"
 simplelog = "^0.4"
-structopt = "^0.0.3"
-structopt-derive = "^0.0.3"
 tempfile = "^2.1"
 tokio-io = "^0.1.1"
 tokio-serde-bincode = "^0.1.0"
