--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ version = "0.1.0"
 
 [dependencies]
 cairo-rs = "^0.1.3"
-docopt = "^0.6"
 error-chain = "^0.10.0"
 futures = "^0.1.14"
 gdk = "^0.5.3"
@@ -62,4 +61,4 @@ libxdo = "^0.4.1"
 tempdir = "^0.3"
 
 [features]
-default = ["cairo-rs/png", "gtk/v3_16", "webkit2gtk/v2_12"]
+default = ["cairo-rs/png", "gtk/v3_16", "relm/use_impl_trait", "webkit2gtk/v2_12"]
