Check if titanium is already running before creating the application

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ open = "^1.1"
 password-store = "^0.1.1"
 rusqlite = "^0.7.3"
 simplelog = "^0.4"
+sysinfo = "^0.3.9"
+syslog = "^3.2.0"
 tempfile = "^2.1"
 tokio-io = "^0.1.1"
 tokio-serde-bincode = "^0.1.0"
