--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -11,6 +11,7 @@ lazy_static = "^0.2.8"
 log = "^0.3"
 serde = "^1.0.7"
 simplelog = "^0.4"
+syslog = "^3.2.0"
 tokio-io = "^0.1.1"
 tokio-serde-bincode = "^0.1.0"
 url = "^1.2"
