--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -4,12 +4,16 @@ name = "titanium-web-extension"
 version = "0.1.0"
 
 [dependencies]
+fg-uds = "^0.1.0"
 futures = "^0.1.14"
+futures-glib = "^0.1.0"
 glib = "^0.1.3"
 glib-sys = "^0.3.4"
 lazy_static = "^0.2.8"
 log = "^0.3"
 regex = "^0.2.2"
+relm-derive-state = "^0.10.0"
+relm-state = "^0.10.0"
 serde = "^1.0.7"
 simplelog = "^0.4"
 syslog = "^3.2.0"
@@ -19,20 +23,6 @@ url = "^1.2"
 webkit2gtk-webextension = "^0.1.0"
 webkit2gtk-webextension-sys = "^0.2.0"
 xdg = "^2.0"
-
-[dependencies.fg-uds]
-git = "https://github.com/antoyo/fg-uds-rs"
-
-[dependencies.futures-glib]
-git = "https://github.com/antoyo/futures-glib-rs"
-
-[dependencies.relm-derive-state]
-branch = "feature/futures-glib"
-git = "https://github.com/antoyo/relm"
-
-[dependencies.relm-state]
-branch = "feature/futures-glib"
-git = "https://github.com/antoyo/relm"
 
 [dependencies.titanium-common]
 path = "../titanium-common"
