--- a/titanium-common/Cargo.toml
+++ b/titanium-common/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 authors = ["Antoni Boucher <bouanto@zoho.com>"]
+description = "Messages to be sent between the web browser and the web extension"
+license = "MIT"
 name = "titanium-common"
+repository = "https://github.com/antoyo/titanium"
 version = "0.1.0"
 
 [dependencies]
