--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 authors = ["Antoni Boucher <bouanto@zoho.com>"]
+description = "Web extension for the web titanium"
+license = "MIT"
 name = "titanium-web-extension"
+repository = "https://github.com/antoyo/titanium"
 version = "0.1.0"
 
 [dependencies]
