--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -29,6 +29,7 @@ xdg = "^2.0"
 
 [dependencies.titanium-common]
 path = "../titanium-common"
+version = "0.1.0"
 
 [features]
 default = ["webkit2gtk-webextension/v2_16"]
