Use dom event instead of draw event to report the scroll

--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -17,13 +17,14 @@ log = "^0.3"
 regex = "^0.2.2"
 relm-derive-state = "^0.10.0"
 relm-state = "^0.10.0"
+send-cell = "^0.1.2"
 serde = "^1.0.7"
 simplelog = "^0.4"
 syslog = "^3.2.0"
 tokio-io = "^0.1.1"
 tokio-serde-bincode = "^0.1.0"
 url = "^1.2"
-webkit2gtk-webextension = "^0.2.0"
+webkit2gtk-webextension = "^0.3.0"
 webkit2gtk-webextension-sys = "^0.3.0"
 xdg = "^2.0"
 
