Switch to abstract unix domain socket for better startup time and more convenience

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ log-panics = "^1.1.0"
 mg = "^0.2.0"
 mg-settings = "^0.2.2"
 mg-settings-macros = "^0.2.1"
+nix = "^0.9.0"
 number_prefix = "^0.2"
 open = "^1.1"
 password-store = "^0.1.1"
@@ -30,7 +31,6 @@ relm-attributes = "^0.10.0"
 relm-derive = "^0.10.0"
 rusqlite = "^0.7.3"
 simplelog = "^0.4"
-sysinfo = "^0.3.9"
 syslog = "^3.2.0"
 tempfile = "^2.1"
 tokio-io = "^0.1.1"
