--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -14,6 +14,7 @@ glib = "^0.3.0"
 glib-sys = "^0.4.0"
 lazy_static = "^0.2.8"
 log = "^0.3"
+nix = "^0.9.0"
 regex = "^0.2.2"
 relm-derive-state = "^0.10.0"
 relm-state = "^0.10.0"
