Url-decode and encode the username for the password store

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ nix = "^0.9.0"
 number_prefix = "^0.2"
 open = "^1.1"
 password-store = "^0.1.1"
+percent-encoding = "^1.0.0"
 relm = "^0.10.0"
 relm-attributes = "^0.10.0"
 relm-derive = "^0.10.0"
