--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ license = "MIT"
 name = "titanium"
 repository = "https://github.com/antoyo/titanium"
 version = "0.1.1"
-
 [dependencies]
 cairo-rs = "^0.2.0"
 fg-uds = "^0.1.0"
@@ -39,6 +38,7 @@ tokio-serde-bincode = "^0.1.0"
 url = "^1.2"
 webkit2gtk = "^0.2.0"
 xdg = "^2.0"
+zip = "^0.2.6"
 
 [dependencies.titanium-common]
 path = "titanium-common"
