Update to relm 0.12

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ gumdrop = "^0.2.0"
 gumdrop_derive = "^0.2.0"
 log = "^0.3"
 log-panics = "^1.1.0"
-mg = "^0.6.0"
+mg = "^0.7.0"
 mg-settings = "^0.4.0"
 mg-settings-macros = "^0.4.0"
 nix = "^0.9.0"
@@ -26,9 +26,9 @@ number_prefix = "^0.2"
 open = "^1.1"
 password-store = "^0.1.1"
 percent-encoding = "^1.0.0"
-relm = "^0.11.0"
-relm-attributes = "^0.11.0"
-relm-derive = "^0.11.0"
+relm = "^0.12.0"
+relm-attributes = "^0.12.0"
+relm-derive = "^0.12.0"
 rusqlite = "^0.7.3"
 simplelog = "^0.4"
 syslog = "^3.2.0"
@@ -49,4 +49,5 @@ libxdo = "^0.4.1"
 tempdir = "^0.3"
 
 [features]
-default = ["cairo-rs/png", "gtk/v3_16", "log-panics/with-backtrace", "relm/use_impl_trait", "webkit2gtk/v2_16"]
+default = ["cairo-rs/png", "gtk/v3_16", "log-panics/with-backtrace", "relm/unstable", "relm-attributes/unstable",
+    "relm-derive/unstable", "relm/use_impl_trait", "webkit2gtk/v2_16"]
