--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -7,26 +7,22 @@ repository = "https://github.com/antoyo/titanium"
 version = "0.1.0"
 
 [dependencies]
-fg-uds = "^0.3.0"
-futures = "^0.1.14"
-futures-glib = "^0.4.0"
+gio = "^0.4.0"
+gio-sys = "^0.6.0"
 glib = "^0.5.0"
 glib-sys = "^0.6.0"
+gobject-sys = "^0.6.0"
 lazy_static = "^0.2.8"
 log = "^0.3"
-nix = "^0.9.0"
 regex = "^0.2.2"
-relm-derive-state = "^0.13.0"
-relm-state = "^0.13.0"
+relm-derive = "^0.14.0"
+relm-derive-state = "^0.14.0"
+relm-state = "^0.14.0"
 send-cell = "^0.1.2"
-serde = "^1.0.7"
 simplelog = "^0.4"
 syslog = "^3.2.0"
-tokio-io = "^0.1.1"
-tokio-serde-bincode = "^0.1.0"
 url = "^1.2"
-webkit2gtk-webextension = "^0.5.0"
-webkit2gtk-webextension-sys = "^0.5.0"
+webkit2gtk-webextension = "^0.6.0"
 xdg = "^2.0"
 
 [dependencies.titanium-common]
@@ -34,7 +30,7 @@ path = "../titanium-common"
 version = "0.1.0"
 
 [features]
-default = ["relm-derive-state/unstable", "webkit2gtk-webextension/v2_18", "webkit2gtk-webextension/gio"]
+default = ["gio-sys/v2_44", "relm-derive-state/unstable", "webkit2gtk-webextension/v2_18", "webkit2gtk-webextension/gio"]
 
 [lib]
 crate-type = ["dylib"]
