--- a/titanium-common/Cargo.toml
+++ b/titanium-common/Cargo.toml
@@ -17,3 +17,6 @@ relm-derive-state = "^0.14.0"
 relm-state = "^0.14.0"
 rmp-serialize = "^0.8.0"
 rustc-serialize = "^0.3.24"
+
+[features]
+default = ["gio-sys/v2_44"]
