--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,7 @@ gdk = "^0.8.0"
 gio = "^0.4.0"
 glib = "^0.5.0"
 gtk = "^0.4.0"
-gumdrop = "^0.2.0"
-gumdrop_derive = "^0.2.0"
+gumdrop = "0.4"
 log = "^0.3"
 log-panics = "^1.1.0"
 mg = "^0.9.0"
