--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,8 @@ gio = "^0.4.0"
 glib = "^0.5.0"
 gtk = "^0.4.0"
 gumdrop = "0.4"
-log = "^0.3"
-log-panics = "^1.1.0"
+log = "0.4"
+log-panics = "2"
 mg = "^0.9.0"
 mg-settings = "^0.4.0"
 mg-settings-macros = "^0.4.0"
@@ -27,8 +27,8 @@ relm = "^0.14.0"
 relm-attributes = "^0.14.0"
 relm-derive = "^0.14.0"
 rusqlite = "^0.7.3"
-simplelog = "^0.4"
-syslog = "^3.2.0"
+simplelog = "0.5"
+syslog = "4"
 tempfile = "3"
 url = "^1.2"
 webkit2gtk = "^0.4.0"
