--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ tempfile = "3"
 url = "^1.2"
 webkit2gtk = "^0.4.0"
 xdg = "^2.0"
-zip = "^0.2.6"
+zip = "0.3"
 
 [dependencies.titanium-common]
 path = "titanium-common"
