--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ percent-encoding = "^1.0.0"
 relm = "^0.14.0"
 relm-attributes = "^0.14.0"
 relm-derive = "^0.14.0"
-rusqlite = "^0.7.3"
+rusqlite = "0.13"
 simplelog = "0.5"
 syslog = "4"
 tempfile = "3"
