Remove gio_ext module

--- a/titanium-common/Cargo.toml
+++ b/titanium-common/Cargo.toml
@@ -8,10 +8,7 @@ version = "0.1.0"
 
 [dependencies]
 gio = "^0.5.0"
-gio-sys = "^0.7.0"
 glib = "^0.6.0"
-glib-sys = "^0.7.0"
-gobject-sys = "^0.7.0"
 log = "^0.4.1"
 relm-derive-state = "^0.15.0"
 relm-state = "^0.15.0"
@@ -19,4 +16,4 @@ rmp-serialize = "^0.8.0"
 rustc-serialize = "^0.3.24"
 
 [features]
-default = ["gio-sys/v2_44"]
+default = ["gio/v2_44"]
