--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ version = "0.1.1"
 [dependencies]
 cairo-rs = "^0.5.0"
 gdk = "^0.9.0"
-gio = "^0.5.0"
+gio = "^0.5.1"
 glib = "^0.6.0"
 gtk = "^0.5.0"
 gumdrop = "0.4"
@@ -34,6 +34,11 @@ url = "^1.2"
 webkit2gtk = "^0.5.0"
 xdg = "^2.0"
 zip = "0.3"
+
+# TODO: remove when https://github.com/gtk-rs/gio/issues/99 is fixed.
+gio-sys = "^0.7.0"
+glib-sys = "^0.7.0"
+gobject-sys = "^0.7.0"
 
 [dependencies.titanium-common]
 path = "titanium-common"
