--- a/titanium-common/Cargo.toml
+++ b/titanium-common/Cargo.toml
@@ -7,12 +7,11 @@ repository = "https://github.com/antoyo/titanium"
 version = "0.1.0"
 
 [dependencies]
-gio = "^0.5.0"
-glib = "^0.6.0"
+gio = "^0.7.0"
+glib = "^0.8.0"
 log = "^0.4.1"
-relm = "^0.15.0"
-relm-derive-state = "^0.15.0"
-relm-state = "^0.15.0"
+relm = "^0.18.0"
+relm-derive = "^0.18.0"
 rmp-serialize = "^0.8.0"
 rustc-serialize = "^0.3.24"
 
