Update to gtk-rs 0.9

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,36 +8,36 @@ repository = "https://github.com/antoyo/titanium"
 version = "0.1.1"
 
 [dependencies]
-cairo-rs = "^0.7.0"
-gdk = "^0.11.0"
-gio = "^0.7.0"
-glib = "^0.8.0"
-gtk = "^0.7.0"
+cairo-rs = "^0.9.0"
+gdk = "^0.13.0"
+gio = "^0.9.0"
+glib = "^0.10.0"
+gtk = "^0.9.0"
 gumdrop = "0.4"
 log = "0.4"
 log-panics = "2"
-mg = "^0.12.0"
+mg = "^0.13.0"
 mg-settings = "^0.4.0"
 mg-settings-macros = "^0.4.0"
 number_prefix = "^0.2"
 open = "^1.1"
 password-store = "^0.3.0"
 percent-encoding = "^1.0.0"
-relm = "^0.18.0"
-relm-derive = "^0.18.0"
+relm = "^0.20.0"
+relm-derive = "^0.20.0"
 rusqlite = "0.20"
 simplelog = "0.5"
 syslog = "4"
 tempfile = "3"
 url = "^1.2"
-webkit2gtk = "^0.8.0"
+webkit2gtk = "^0.10.0"
 xdg = "^2.0"
 zip = "0.3"
 
-# TODO: remove when https://github.com/gtk-rs/gio/issues/99 is fixed.
-gio-sys = "^0.9.0"
-glib-sys = "^0.9.0"
-gobject-sys = "^0.9.0"
+# TODO: remove since https://github.com/gtk-rs/gio/issues/99 is fixed.
+gio-sys = "^0.10.0"
+glib-sys = "^0.10.0"
+gobject-sys = "^0.10.0"
 
 [dependencies.titanium-common]
 path = "titanium-common"
