Update to relm 0.21

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,15 +16,15 @@ gtk = "^0.9.0"
 gumdrop = "0.4"
 log = "0.4"
 log-panics = "2"
-mg = "^0.13.1"
+mg = "0.14"
 mg-settings = "^0.4.0"
 mg-settings-macros = "^0.4.0"
 number_prefix = "^0.2"
 open = "^1.1"
 password-store = "^0.4.0"
 percent-encoding = "^1.0.0"
-relm = "^0.20.0"
-relm-derive = "^0.20.0"
+relm =  "0.21"
+relm-derive = "0.21"
 rusqlite = "0.20"
 simplelog = "0.5"
 syslog = "4"
