--- a/titanium-common/Cargo.toml
+++ b/titanium-common/Cargo.toml
@@ -10,8 +10,8 @@ version = "0.1.0"
 gio = "^0.9.0"
 glib = "^0.10.0"
 log = "^0.4.1"
-relm = "^0.20.0"
-relm-derive = "^0.20.0"
+relm = "0.21"
+relm-derive = "0.21"
 rmp-serialize = "^0.8.0"
 rustc-serialize = "^0.3.24"
 
