--- a/titanium-web-extension/Cargo.toml
+++ b/titanium-web-extension/Cargo.toml
@@ -12,8 +12,8 @@ gio = "^0.9.0"
 glib = "^0.10.0"
 log = "^0.3"
 regex = "^0.2.2"
-relm = "^0.20.0"
-relm-derive = "^0.20.0"
+relm = "0.21"
+relm-derive = "0.21"
 send-cell = "^0.1.2"
 simplelog = "^0.4"
 syslog = "^3.2.0"
